# EAI-0002-PRIMEIROS-PASSOS-LANGGRAPH

./: 01_Basico.ipynb  02_State.ipynb  03_Condicionais.ipynb  04_Erros.ipynb  05_GeradorManchete.ipynb  06_EsquemaCompleto.ipynb  07_AgenticRag.ipynb  README.md  pyproject.toml
