[project]
name = "cursolanggraph"
version = "0.1.0"
description = ""
authors = [
    {name = "João Fassina"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "langgraph (>=0.2.68,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "unstructured (>=0.16.17,<0.17.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "duckduckgo-search (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
